--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.6.3",
     "react-color": "^2.14.1",
     "react-dom": "^16.6.3",
+    "react-onclickoutside": "^6.7.1",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-scripts": "2.1.1",
